# kokkai

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  TODO.md  api.py  compose.yaml  fly.toml  main.py  pyproject.toml
.github/workflows/: ingest.yml
docs/: api.md  data-sources.md  ingest-flow.md  scripts-ingest.md
scripts/: ingest.py
src/kokkai/: __init__.py  main.py  settings.py
src/kokkai/api/: api.py  app.py  schemas.py
src/kokkai/api/routes/: bills.py  diet_sessions.py  health.py  meeting_records.py  questions.py
src/kokkai/core/: config.py
src/kokkai/db/: engine.py  schema.py  sqlite_udfs.py
src/kokkai/ingest/: cli_log.py  cli_sessions.py  documents.py  http.py  pipeline.py  runner.py
src/kokkai/ingest/normalizers/: __init__.py
src/kokkai/ingest/parsers/: common.py  kokkai_meetings.py  ndl_bill_id.py  questions.py  shugiin_bills.py  shugiin_sessions.py
src/kokkai/ingest/pipelines/: kokkai_meetings.py  questions.py  shugiin_bills.py  shugiin_sessions.py
src/kokkai/ingest/sources/: kokkai_api.py  kokkai_ndl_playwright.py  questions.py  shugiin_bills.py  shugiin_sessions.py
src/kokkai/models/: bill.py  diet_session.py  meeting_record.py  question.py
src/kokkai/repositories/: bills.py  diet_sessions.py  meeting_records.py  questions.py
tests/: test_cli_sessions.py  test_crosscut.py  test_ndl_bill_id.py  test_questions_parser.py  test_questions_repository.py
